# 3DViewer

./: CMakeLists.txt  Makefile  README.md  controller.h  gifcreator.h  main.cpp  model.h  openglwidget.cpp  openglwidget.h  view.cpp  view.h  view.ui  vshader.vsh
3DViewer/: CMakeLists.txt  Resourses.qrc  controller.cpp  controller.h  fshader.fsh  gifcreator.cpp  gifcreator.h  main.cpp  model.cpp  model.h  object.cpp  object.h  openglwidget.cpp  openglwidget.h  view.cpp  view.h  view.ui  vshader.vsh
Resourses/: 3DViewer.icns
